--- a/HOUSE LOCATION.html
+++ b/HOUSE LOCATION.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,34 +8,33 @@
     <title>PYNUMMOOTIL SAMVILLA</title>
 
     <style>
-   body {
-    background-color: #87CEEB; /* Light sky blue background color */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Ensure the body takes up the full height of the viewport */
-    margin: 0; /* Remove default margin */
-    text-align: center;
-    padding: 20px;
-}
+        body {
+            background-color: #87CEEB;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            padding: 20px;
+        }
 
-div {
-    margin-bottom: 20px;
-}
+        div {
+            margin-bottom: 20px;
+        }
 
-p {
-    font-size: 30px; /* Adjust the font size for paragraphs */
-}
+        p {
+            font-size: 30px;
+        }
 
-a {
-    display: block;
-    margin-bottom: 5px;
-    color: #0000FF; /* Set your preferred link color */
-    text-decoration: none;
-    font-size: 25px; /* Adjust the font size for links */
-}
-
+        a {
+            display: block;
+            margin-bottom: 5px;
+            color: #0000FF;
+            text-decoration: none;
+            font-size: 25px;
+        }
     </style>
 </head>
 <body>
@@ -52,4 +53,3 @@ a {
 
 </body>
 </html>
-
